--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.14.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "prisma": "^6.14.0",
     "typescript": "^5.9.2"
   }
