--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
 
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
