--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
