--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@prisma/client": "^6.14.0",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
+    "redis": "^5.8.2",
     "zod": "^4.1.1"
   },
   "devDependencies": {
